log
Tue 11 Oct 2022 01:20:26 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
4a9d3bf
Tue 11 Oct 2022 01:20:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   36 |  Heap* new = (Heap*)malloc(*sizeof(Heap));
      |                            ^~~~~~~~~~~~~
Compilation failed
d1f54d3
Tue 11 Oct 2022 01:21:01 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:41: error: expected expression before ‘)’ token
   36 |  Heap* new = (Heap*)malloc(sizeof*(Heap));
      |                                         ^
Compilation failed
91a0c0a
